[created] a get in touch modal for contact us section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --card: #1c262d;
   --foreground: #829aae;
   --title: #9fbad0;
+  --primaryColor: #10acf4;
 }
 
 @media (prefers-color-scheme: dark) {
