--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,9 @@ body {
 }
 
 .custom-bg {
-  border: 1px solid #10acf4;
+  border: 1px solid #013f5b;
   border-radius: 7px;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 4px 6px rgba(2, 97, 180, 0.1),
+    inset 0 2px 4px rgba(3, 34, 53, 0.1);
 }
