--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --background: #121c23;
+  --background: #0b1e2c;
   --card: #1c262d;
   --foreground: #829aae;
   --title: #9fbad0;
